# futures-batch

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: bench.yml  rust.yml
benches/: futures_batch_benchmark.rs
src/: lib.rs
