[package]
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
description = "An adaptor that chunks up elements and flushes them after a timeout or when the buffer is full. (Formerly known as tokio-batch.)"
license = "MIT OR Apache-2.0"
name = "futures-batch"
version = "0.6.1"
edition = "2018"
repository = "https://github.com/mre/futures-batch"

[dependencies]
futures = { version = "0.3", features = ["async-await"] }
pin-utils = "0.1.0"
futures-timer = "3.0.2"

[dev-dependencies]
tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }

[dev-dependencies.doc-comment]
version = "0.3"
