[package]
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
description = "An adaptor that chunks up elements and flushes them after a timeout or when the buffer is full. (Formerly known as tokio-batch.)"
license = "MIT OR Apache-2.0"
name = "futures-batch"
version = "0.7.0"
edition = "2024"
repository = "https://github.com/mre/futures-batch"

[lib]
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[features]
default = []
sink = ["futures-sink"]

[dependencies]
futures = { version = "0.3", features = ["async-await"] }
pin-project-lite = "0.2"
futures-timer = "3.0"
futures-sink = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.6", features = ["html_reports", "async_tokio"] }

[dev-dependencies.doc-comment]
version = "0.3"

[[bench]]
name = "futures_batch_benchmark"
harness = false
